@@ -1,9 +1,8 @@
+* clean up code for -Wall (fn_select - zzzz)
 * handle 8 bit keys
-* mkdir and direct commands (site, etc.)
+* direct commands (site, etc.)
 * problems with listing of ftp://ftp.unicode.org/ and 128.223.95.87
 	(file names short)
 * parsing symlinks on DOS servers
-* site exec
 * <local> mode
 * decent documentation
-* clean up code for -Wall
