@@ -25,6 +25,7 @@
 #include <stdarg.h>
 #include <stdio.h>
 #include <stdlib.h>
+#include <termcap.h>
 
 #include "config.h"
 #include "display.h"
