@@ -26,6 +26,8 @@
 #include <string.h>
 #include <stdlib.h>
 #include <pwd.h>
+#include <sys/types.h>
+#include <unistd.h>
 
 
 
@@ -115,7 +117,7 @@ local_exp(char *path)
 	}
     }
     else {
-	if (s=strchr(path, '/'))
+	if ((s=strchr(path, '/')))
 	    *s = '\0';
 	if ((pw=getpwnam(path+1)) == NULL
 	    || (home=pw->pw_dir) == NULL) {
@@ -160,4 +162,101 @@ argstostr(char **args)
     }
 
     return s;
+}
+
+
+
+static char *deurl(char *u);
+
+int
+parse_url(char *url, char **user, char **pass,
+	  char **host, char **port, char **dir)
+{
+    char *p, *q, *r;
+    int userp = 0;
+
+    if (strncmp(url, "ftp://", 6) != 0)
+	return -1;
+    url+=6;
+
+    if ((p=strchr(url, '/')) != NULL)
+	*(p++) = '\0';
+    else
+	p = url+strlen(url);
+    
+    if ((q=strrchr(url, '@')) != NULL) {
+	*q = '\0';
+	if ((r=strchr(url, ':')) != NULL) {
+	    *(r++) = '\0';
+	    *pass = deurl(r);
+	}
+	*user = deurl(url);
+	url = q+1;
+	userp = 1;
+    }
+
+    if ((q=strchr(url, ':')) != NULL) {
+	*q = '\0';
+	if (*(q+1) != '\0')
+	    *port = deurl(q+1);
+    }
+	
+    *host = deurl(url);
+
+    if (p && *p != '\0') {
+	if ((*dir=(char *)malloc(strlen(p)+3)) == NULL) {
+	    /* fprintf(stderr, "%s: malloc failure\n", prg); */
+	    fprintf(stderr, "malloc failure\n");
+	    return -1;
+	}
+	/* sprintf(*dir, "%s%s", userp ? "" : "/", p); */
+	*dir = deurl(p);
+    }
+
+    return 0;
+}
+
+
+
+static int
+hexdigit(int c)
+{
+    if (c >= '0' && c <= '9')
+	return c-'0';
+    if (c >= 'a' && c <= 'f')
+	return c-'a';
+    if (c >= 'A' && c <= 'F')
+	return c-'F';
+    
+    return 0;
+}
+
+
+
+static char *
+deurl(char *s)
+{
+    char *t, *p;
+    int c;
+
+    if ((t=(char *)malloc(strlen(s)+1)) != NULL) {
+	for (p=t; *s; s++) {
+	    if (*s == '%') {
+		if (s[1] == '\0' || s[2] == '\0')
+		    *(p++) = '%';
+		else {
+		    c = hexdigit(*(++s))*16;
+		    c += hexdigit(*(++s));
+
+		if (c != 0)
+		    *(p++) = c;
+		}
+	    }
+	    else
+		    *(p++) = *s;
+	}
+	*p = '\0';
+    }
+
+    return t;
 }
