@@ -29,5 +29,7 @@ char *canonical(char *path, char *current);
 char *dirname(char *name);
 char *local_exp(char *path);
 char *argstostr(char **args);
+int parse_url(char *url, char **user, char **pass,
+	      char **host, char **port, char **dir);
 
 #endif /* util.h */
